@@ -42,7 +42,7 @@
     <mvn.slf4j.version>1.7.30</mvn.slf4j.version>
     <mvn.log4j.version>2.13.3</mvn.log4j.version> <!-- upgrading to 2.14.0 causes a strange error in SessionManagerTest -->
     <mvn.activemq.version>5.9.0</mvn.activemq.version> <!-- upgrading triggers changes to ActiveMQ ObjectName packages -->
-    <mvn.test.options>-Xmx1024</mvn.test.options>
+    <mvn.test.options>-Xmx2048m -Xms128m -XX:MaxPermSize=512m</mvn.test.options>
     <maven.build.timestamp.format>yyyy-MM-dd HH:mm:ss.SSS Z</maven.build.timestamp.format>
   </properties>
   <dependencyManagement>
@@ -926,13 +926,13 @@
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-library</artifactId>
-        <version>1.3</version>
+        <version>2.2</version>
         <scope>test</scope>
       </dependency>
       <dependency>
         <groupId>org.hamcrest</groupId>
         <artifactId>hamcrest-core</artifactId>
-        <version>1.3</version>
+        <version>2.2</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
